--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/setting.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/setting.tml
@@ -1,191 +1,1 @@
-## LICENSE START ###############################################################
-## Copyright 2009, 2010 Innovation Gate GmbH. All Rights Reserved.
-## 
-## This file is part of the OpenWGA server platform.
-## 
-## OpenWGA is free software: you can redistribute it and/or modify
-## it under the terms of the GNU General Public License as published by
-## the Free Software Foundation, either version 3 of the License, or
-## (at your option) any later version.
-## 
-## In addition, a special exception is granted by the copyright holders
-## of OpenWGA called "OpenWGA plugin exception". You should have received
-## a copy of this exception along with OpenWGA in file COPYING.
-## If not, see <http://www.openwga.com/gpl-plugin-exception>.
-## 
-## OpenWGA is distributed in the hope that it will be useful,
-## but WITHOUT ANY WARRANTY; without even the implied warranty of
-## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-## GNU General Public License for more details.
-## 
-## You should have received a copy of the GNU General Public License
-## along with OpenWGA in file COPYING.
-## If not, see <http://www.gnu.org/licenses/>.
-## LICENSE END #################################################################
-
-<tml:action id="app-changed">
-	tmlform.removeField(WGA.scoped('image'))
-	tmlform.removeField(WGA.scoped('image_mo'))
-	tmlform.removeField(WGA.scoped('lang'))
-</tml:action>
-
-<tml:action id="clearImages">
-	tmlform.removeField(WGA.scoped('image'))
-	tmlform.removeField(WGA.scoped('image_mo'))
-</tml:action>
-
-<label><tml:label key="image.settings.datasource"/>:</label>
-<div style="margin:10px">
-	<tml:input name="{scoped:source}" type="select" options="{label(CMM.settingSource()=='template'?'image.settings.source.template':'image.settings.source')}"
-		changeaction="clearImages" ajax="true"
-		mode="{option:mode}"
-		cssclass="form-control"
-	/>
-</div>
-
-<tml:case condition="tmlform.field(WGA.scoped('source'))=='container'">
-
-	<label><tml:label key="image.settings.database"/>:</label>
-	<div style="margin:10px">
-		<tml:script>
-			_dbs = CMM.getDbKeys()
-			_dbs.remove(meta("db", "dbkey"))
-			_dbs.add(0, meta("db", "dbkey") + " (aktuelle App)|this");
-
-			_lang = LANGUAGE;
-			var database = db()
-			if(tmlform.field(WGA.scoped("dbkey")) && tmlform.field(WGA.scoped("dbkey"))!="this")
-				database = db(tmlform.field(WGA.scoped("dbkey")))
-			var langs = database.getLanguages().keySet();
-			
-			if(!langs.contains(_lang))
-				_lang = langs.iterator().next();
-
-			_langs = WGA.createList()
-			for(let lang in Iterator(database.getLanguages().entrySet())){
-				_langs.add(lang.value.title + "|" + lang.key) 
-			}
-
-		</tml:script>
-		<tml:input name="{scoped:dbkey}" type="select" optionsitem="_dbs"
-			changeaction="app-changed" ajax="true"
-			default="this"
-			mode="{option:mode}"
-			cssclass="form-control"
-		/>
-	</div>
-
-	<div style="margin:10px">
-		<tml:input name="{scoped:lang}" default="{_lang}" type="select" optionsitem="_langs" changeaction="$refresh" cssclass="form-control"/>
-	</div>
-	
-	<div style="margin:10px">
-		<tml:include designdb="{option('cm_dbkey')}" ref="util:select-document" o_language="{tmlform.field(WGA.scoped('lang'))}">
-			<tml:option name="dbkey" expression="tmlform.field(WGA.scoped('dbkey'))=='this' ? null : tmlform.field(WGA.scoped('dbkey'))"/>
-			<tml:option name="fieldname" expression="WGA.scoped('sourcedoc')"/>
-			<tml:option name="changeaction"><tml:action ref="clearImages"/></tml:option>
-		</tml:include>
-	</div>
-	
-</tml:case>
-
-<tml:script>
-	_context = null;
-	var source = tmlform.field(WGA.scoped('source')) 
-	if(!source)
-		_context= CMM.settingSource()=="template" ? CMM.getTemplateContextPath() : "this";
-	else {
-		_context="docid:"+tmlform.field(WGA.scoped('sourcedoc'))+"<"+ tmlform.field(WGA.scoped('lang')) + ">"
-		if(tmlform.field(WGA.scoped('dbkey'))!='this')
-			_context = "db:"+tmlform.field(WGA.scoped("dbkey"))+"/" + _context
-	}
-</tml:script>
-<tml:case context="{_context}" iscontextvalid="true">
-	<label><tml:label key="image"/>:</label>
-	<div style="margin:10px">
-		<tml:include ref="util:select-image" o_derivate="usage=poster" o_empty-text="Kein Bild"/>
-	</div>
-	
-	<label><tml:label key="image.img-mouse-over"/>:</label>
-	<div style="margin:10px">
-		<tml:include ref="util:select-image" o_derivate="usage=poster" o_fieldname="image_mo" o_empty-text="Original"/>
-	</div>
-</tml:case>
-
-<label><tml:label key="image.settings.title"/>:</label>
-<div style="margin:10px">
-	<tml:input name="{scoped:title}" type="text" cssstyle="width:100%" mode="{option:mode}"/>
-</div>
-
-<label><tml:label key="image.settings.labeling"/>:</label>
-<div style="margin:10px">
-	<tml:input name="{scoped:descriptions}" type="checkbox" labeled="true" options="{label('image.settings.descriptions.options')}" changeaction="$refresh" ajax="true" mode="{option:mode}"/>
-	<tml:case condition="tmlform.fieldList(WGA.scoped('descriptions')).contains('subtitle')">
-		<br>
-		<tml:input name="{scoped:subtitle}" type="textarea" cssstyle="width:100%" mode="{option:mode}"/>
-	</tml:case>
-</div>
-
-<label><tml:label key="image.click"/>:</label>
-<div style="margin:10px">
-	<tml:input name="{scoped:onclick}" type="select" options="{label('image.settings.click-options')}" default="nothing"
-		changeaction="$refresh" ajax="true"
-		mode="{option:mode}"
-		cssclass="form-control"
-	/>
-</div>
-
-<tml:select switch="tmlform.field(WGA.scoped('onclick'))">
-	<tml:case value="link">
-		<label>Link:</label>
-		<div style="margin:10px">
-			<tml:script>
-				// backward compatibilty
-				var existing_url = tmlform.field(WGA.scoped("url"))
-				if(existing_url && !tmlform.field(WGA.scoped("link_type"))){
-					if(context("docid:"+existing_url, false)){
-						tmlform.setfield(WGA.scoped("link_type"), "int")
-						tmlform.setfield(WGA.scoped("wgakey"), context("docid:"+existing_url).STRUCTKEY)
-					}
-					else{
-						tmlform.setfield(WGA.scoped("link_type"), "ext")
-					}
-				}
-			</tml:script>
-			<tml:input name="{scoped:link_type}" default="int" type="select" cssclass="form-control" options="{label('image.setting.link.options')}" changeaction="$refresh" mode="{option:mode}"/>
-			<tml:if condition="tmlform.field(WGA.scoped('link_type'))=='int'">
-				<tml:then>
-					<div style="margin: 5px 0">
-						<tml:include designdb="{option('cm_dbkey')}" ref="util:select-document">
-							<tml:option name="fieldname" expression="WGA.scoped('wgakey')"/>
-						</tml:include>
-					</div>
-				</tml:then>
-				<tml:else>
-					<tml:input name="{scoped:url}" cssstyle="width:100%" mode="{option:mode}" html_placeholder="absolute URL ..."/>
-				</tml:else>
-			</tml:if>			
-		</div>
-
-		<label>Zielfenster:</label>
-		<div style="margin:10px">
-			<tml:input name="{scoped:link_target}" mode="{option:mode}" html_placeholder="Optionaler Names eines Zielfensters"/>
-		</div>
-	</tml:case>
-	<tml:case value="zoom">
-		<tml:case context="{_context}" iscontextvalid="true">
-			<label>Lightbox-Image:</label>
-				<div style="margin:10px">
-					<tml:include ref="util:select-image" o_fieldname="lightbox_image" o_empty-text="Original"/>
-				</div>
-				<div style="margin:10px">
-					<tml:input name="{scoped:download}" labeled="true" type="boolean" default="false" options="{label('image.settings.lightbox.show-download.options')}" mode="{option:mode}"/>
-				</div>
-			</div>
-		</tml:case>
-		<label><tml:label key="image.settings.lightbox-group"/>:</label>
-		<div style="margin:10px">
-			<tml:input name="{scoped:image_group}" cssstyle="width:100%" default="default" mode="{option:mode}"/>
-		</div>
-	</tml:case>
-</tml:select>
+<tml:include ref="[::{$option_cm_dbkey}:setting]"/>
