--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules/settings.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules/settings.tml
@@ -127,17 +127,16 @@
 				_hasClasses = $option_mode=="view" ? tmlform.fieldlist(WGA.scoped('module_css_classes', tmlform.mod_id)).size() 
 					: _classes && (_classes.classes.size() || _classes.options.size())
 				
+				_styles = {
+					included: false
+				}
 			</tml:script>
 	
 			<div>
 				<tml:range labellanguage="de">
-					<tml:include designdb="{_designdb}" ref="{_tml}" o_ns="{tmlform.mod_id}" tmlscope="{tmlform.mod_id}" if="_tml">
-						<tml:option name="parent-scope" expression="tmlform.parent_mod_id"/>
-						<tml:option name="cm_dbkey" expression="context('main').meta('db', 'dbkey')"/>
-					</tml:include>
-					<tml:case condition="_hasClasses">
-						<label>Stil</label>
-						<div style="margin:10px;padding:10px;background:#eee;border:solid #ccc 1px;border-radius:4px;display:flex">
+				
+					<tml:option name="cmm_styles" if="_hasClasses">
+						<div style="display:flex">
 							<tml:case condition="_classes.classes.size()">
 								<div style="flex:1">
 									<tml:input labeled="true" name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="checkbox" optionsitem="_classes.classes" mode="{option:mode}"/>
@@ -154,7 +153,20 @@
 								</tml:foreach>
 							</div>
 						</div>
+					</tml:option>
+				
+					<tml:include designdb="{_designdb}" ref="{_tml}" o_ns="{tmlform.mod_id}" tmlscope="{tmlform.mod_id}" if="_tml" o-module_styles="_styles">
+						<tml:option name="parent-scope" expression="tmlform.parent_mod_id"/>
+						<tml:option name="cm_dbkey" expression="context('main').meta('db', 'dbkey')"/>
+					</tml:include>
+
+					<tml:case unless="_styles.included" if="_hasClasses">
+						<label>Stil</label>
+						<div style="margin:10px;padding:10px;background:#eee;border:solid #ccc 1px;border-radius:4px">
+							<tml:option name="cmm_styles"/>
+						</div>
 					</tml:case>
+					
 					<tml:case condition="!_hasClasses && !_tml">
 						Dieses Modul besitzt keine Einstellungsmöglichkeiten.
 					</tml:case>
