--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/plugin-cm-neo/setting.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/plugin-cm-neo/setting.tml
@@ -1,28 +1,3 @@
-## LICENSE START ###############################################################
-## Copyright 2009, 2010 Innovation Gate GmbH. All Rights Reserved.
-## 
-## This file is part of the OpenWGA server platform.
-## 
-## OpenWGA is free software: you can redistribute it and/or modify
-## it under the terms of the GNU General Public License as published by
-## the Free Software Foundation, either version 3 of the License, or
-## (at your option) any later version.
-## 
-## In addition, a special exception is granted by the copyright holders
-## of OpenWGA called "OpenWGA plugin exception". You should have received
-## a copy of this exception along with OpenWGA in file COPYING.
-## If not, see <http://www.openwga.com/gpl-plugin-exception>.
-## 
-## OpenWGA is distributed in the hope that it will be useful,
-## but WITHOUT ANY WARRANTY; without even the implied warranty of
-## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-## GNU General Public License for more details.
-## 
-## You should have received a copy of the GNU General Public License
-## along with OpenWGA in file COPYING.
-## If not, see <http://www.gnu.org/licenses/>.
-## LICENSE END #################################################################
-
 <tml:action id="app-changed">
 	tmlform.removeField(WGA.scoped('image'))
 	tmlform.removeField(WGA.scoped('image_mo'))
@@ -34,18 +9,9 @@
 	tmlform.removeField(WGA.scoped('image_mo'))
 </tml:action>
 
-<ul class="nav nav-tabs">
-	<li class="active"><a data-toggle="tab" href="#basic">Basisdaten</a></li>
-	<li><a data-toggle="tab" href="#mouse-over">Mouse-Over</a></li>
-	<li><a data-toggle="tab" href="#click">Klick</a></li>
-	<tml:{li} if="$option_cmm_styles">
-		<a data-toggle="tab" href="#style">Stil</a>
-	</tml:{li}>
-</ul>
-<div class="tab-content">
+<tml:[util:tabs] designdb="plugin-cm-neo">
 
-	<div class="tab-pane active" id="basic">
-		
+	<tml:[util:tab-page] designdb="plugin-cm-neo" o_id="basic" o_title="Basisdaten">
 		<label><tml:label key="image.settings.datasource"/>:</label>
 		<div style="margin:10px">
 			<tml:input name="{scoped:source}" type="select" options="{label(CMM.settingSource()=='template'?'image.settings.source.template':'image.settings.source')}"
@@ -127,23 +93,24 @@
 				<tml:input name="{scoped:subtitle}" type="textarea" cssstyle="width:100%" mode="{option:mode}"/>
 			</tml:case>
 		</div>
-
-	</div>
+	</tml:[util:tab-page]>
 	
-	<div class="tab-pane" id="mouse-over">
+	<tml:[util:tab-page] designdb="plugin-cm-neo" o_id="mouse-over" o_title="Mouse-Over">
 		<tml:portlet name="mouse-over" ref="::mouse-over" o-context="_context"/>
-	</div>
-	
-	<div class="tab-pane" id="click">
-		<tml:portlet name="click" ref="::click"/>
-	</div>
+	</tml:[util:tab-page]>
 
-	<tml:{div} if="$option_cmm_styles" html_class="tab-pane" html_id="style">
-		<tml:option name="cmm_styles"/>
+	<tml:[util:tab-page] designdb="plugin-cm-neo" o_id="click" o_title="Klick">
+		<tml:portlet name="click" ref="::click"/>
+	</tml:[util:tab-page]>
+
+	<tml:[util:tab-page] designdb="plugin-cm-neo" o_id="style" o_title="Stil" if="$option_cmm_styles">
+		<div style="padding:0px 10px">
+			<tml:option name="cmm_styles"/>
+		</div>
 		<tml:script>
 			$option_module_styles.included=true;
 		</tml:script>
-	</tml:{div}>
+	</tml:[util:tab-page]>
 	
-</div>
+</tml:[util:tabs]>
 
