--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/plugin-cm-neo/settings-tile.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/plugin-cm-neo/settings-tile.tml
@@ -1,18 +1,6 @@
-<ul class="nav nav-tabs">
-	<li <tml:case condition="!portlet.active_tab || portlet.active_tab=='basic'">class="active"</tml:case>>
-		<a data-toggle="tab" href="#basic">Layout</a>
-	</li>
-	<li <tml:case condition="portlet.active_tab=='link'">class="active"</tml:case>>
-		<a data-toggle="tab" href="#link">Klick</a>
-	</li>
-	<tml:{li} if="$option_cmm_styles" html_class="{portlet.active_tab=='style'?'active':VOID}">
-		<a data-toggle="tab" href="#style">Stil</a>
-	</tml:{li}>
-</ul>
-<div class="tab-content">
-
-	<div class="tab-pane <tml:case condition="!portlet.active_tab || portlet.active_tab=='basic'">active</tml:case>" id="basic">		
-		
+<tml:[util:tabs] designdb="plugin-cm-neo">
+	
+	<tml:[util:tab-page] designdb="plugin-cm-neo" o_id="basic" o_title="Layout">
 		<label><tml:label key="tiles.tile.setting.width"/></label>
 		<div style="margin:10px">
 			<tml:input name="{scoped:width}" type="number" default="1" mode="{option:mode}"/>
@@ -31,36 +19,19 @@
 				cssclass="form-control"
 			/>
 		</div>
-		
-	</div>
-	
-	<div class="tab-pane <tml:case condition="portlet.active_tab=='link'">active</tml:case>" id="link">
-		<tml:portlet name="link" ref="::link"/>
-	</div>
+	</tml:[util:tab-page]>
 
-	<tml:{div} if="$option_cmm_styles" html_class="[tab-pane {portlet.active_tab=='style' ? 'active':VOID}]" html_id="style" html_style="padding:20px 10px">
-		<tml:option name="cmm_styles"/>
+	<tml:[util:tab-page] designdb="plugin-cm-neo" o_id="link" o_title="Link">
+		<tml:portlet name="link" ref="::link"/>
+	</tml:[util:tab-page]>
+
+	<tml:[util:tab-page] designdb="plugin-cm-neo" o_id="style" o_title="Stil" if="$option_cmm_styles">
+		<div style="padding:0px 10px">
+			<tml:option name="cmm_styles"/>
+		</div>
 		<tml:script>
 			$option_module_styles.included=true;
 		</tml:script>
-	</tml:{div}>
+	</tml:[util:tab-page]>
 	
-</div>
-
-<script>
-	require(["jquery"], function($){
-		$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {		
-			var tab_id = this.hash.substr(1);
-			WGA.ajax.action({
-				action: "<tml:action ajax="norefresh">
-					portlet.active_tab = request.getParameter("tab")
-				</tml:action>",
-				mode: "norefresh",
-				graydiv: false,
-				params: {
-					tab: tab_id
-				}
-			})
-		})	
-	})
-</script>
+</tml:[util:tabs]>
