--- a/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
@@ -30,6 +30,18 @@
 		if(!auth.getAccessFilter(app))
 			auth.applyAccessFilter(db().getAttribute("CM.FilterUids").get(db().ACCESSLEVEL_CHIEF_EDITOR), app);
 	
+		// create template area if cs is version>=5
+		var database = db(portlet.dbkey);
+		if(database.getContentStoreVersion()>=5 && database.getArea("$templates")==null){
+			WGA.Master.runFunction(function(dbkey){
+				var database = db(dbkey);
+				var area = database.createArea("$templates");
+				area.systemArea = true;
+				area.save();
+				console.log("Template area created", dbkey)
+			}, portlet.dbkey)
+		}
+
 	</tml:script>
 
 	<tml:include ref="page" o_title="[{WGA.Brand.name} Content Manager]" o_accesslevel="{WGA.app(portlet.dbkey).accessLevel}">
