removed overflow:hidden

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
@@ -27,7 +27,7 @@
 				
 				color: "inherit",
 				text_decoration: "none",
-				overflow: "hidden",
+				//overflow: "hidden",
 				".module-cm_image": {
 					overflow: "hidden"		// IE11 needs this.
 				},
