#00005733: CM-Neo improvements in case of missing page types or areas or languages

--- a/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/mode-select-db.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/mode-select-db.tml
@@ -60,7 +60,7 @@
 		<tml:include ref="::select-db" o_msg="{_msg}"/>
 	</tml:elseif>
 	
-	<tml:elseif condition="!_Database.isAuthor() || (!_Database.hasDesign() && !_Database.isManager())">
+	<tml:elseif condition="!_Database.isAuthor()/">
 		<tml:include ref="::login" o_msg="{_msg}"/>
 	</tml:elseif>
 
