#00005734: V-Host setting "hideHomepageURL" not cleared when "hideDefaultDatabaseInURL" is disabled

--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/mode-edit.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/mode-edit.tml
@@ -23,6 +23,9 @@
 		else if(tmlform.allowedDbsOption=="none")
 			host.defaultDatabase="";
 
+		if(!tmlform.field("/hideDefaultDatabaseInURL"))
+			host.hideHomepageURL=false;
+
 		host.virtualResources.clear();
 		host.virtualResources.addAll(vr);
 
