#00005737: Improved Login error and message handling

--- a/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/login.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/login.tml
@@ -16,6 +16,8 @@
 				return;
 			}
 			log.info("user '" + tmlform.username + "' is logged in as " + AFW.database(database).getAccessLevelText())
+			if(!WGA.app(database).isAuthor())
+				tmlform.addmessage("Der User <b>" + tmlform.username + "</b> ist kein Autor dieser Website.")
 		}
 		catch(e){
 			tmlform.addmessage(e.message)
@@ -42,7 +44,12 @@
 				if(option("msg"))
 					tmlform.addmessage(option('msg'))
 			</tml:script>
-			<h1>Anmelden an Website <tml:item name="dbkey" type="portlet"/></h1>
+			
+			<tml:if istrue="$option_dbkey_auto_selected">
+				<tml:then><h1>Anmelden als Website-Autor</h1></tml:then>
+				<tml:else><h1>Anmelden an Website <tml:item name="dbkey" type="portlet"/></h1></tml:else>
+			</tml:if>
+			
 			<tml:case condition="tmlform.hasmessages()">
 				<div class="alert alert-danger">
 					<h4>Die Anmeldung konnte nicht durchgeführt werden:</h4>
