--- a/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/mode-select-db.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/mode-select-db.tml
@@ -22,8 +22,10 @@
 			if(Database.isValid() && Database.isAuthoringAllowed())
 				allowedDbKeys.add(dbkey);
 		}		
-		if(allowedDbKeys.size()==1)
+		if(allowedDbKeys.size()==1){
 			portlet.dbkey = allowedDbKeys.get(0);
+			setOption("dbkey_auto_selected", true);
+		}
 	}
 
 	if(portlet.dbkey){
@@ -43,9 +45,6 @@
 		else if(!_Database.isAuthoringAllowed()){
 			_msg = "Diese Website ist nicht zur Bearbeitung im Content Manager vorgesehen."
 			return;
-		}
-		else if(!_Database.isAuthor() && App.isOpen() && !App.isAnonymous()){
-			_msg = "Der angemeldete User <b>" + context("db:"+portlet.dbkey).meta("db", "username") + "</b> ist kein Autor dieser Website. Bitte melden Sie sich als Autor an."
 		}
 	}
 </tml:script>
