--- a/OpenWGA/plugins/admin/design/tml/html/domains/domain/mode-edit.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/domains/domain/mode-edit.tml
@@ -36,7 +36,10 @@
 		if(tmlform.auth_enabled){
 			domain.authenticationSource = new Packages.de.innovationgate.wga.config.AuthenticationSource();
 		}
-		else domain.authenticationSource = null;
+		else {
+			domain.authenticationSource = null;
+			tmlform.removeField("/pwdSelfserviceURL")
+		}
 
 		// Personalisation
 		if(tmlform.pers_enabled){
