--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/query.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/query.tml
@@ -27,6 +27,7 @@
 	_offset = CMM.setting('start_entry');
 	if(!_offset)
 		_offset = "1";
+	_layout = CMM.setting('layout');
 </tml:script>
 
 <tml:collection id="{scoped:child-collection}">
@@ -35,4 +36,6 @@
 	</tml:query>
 </tml:collection>
 
+<div class="<tml:item name="_layout"/>">
 <tml:include ref="{'::layout:'+CMM.setting('layout')}" o_offset="{_offset}" o-entries="_entries"/>
+</div>
