#00005771: CM-Neo: changes wording for Menu "settings"

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
@@ -196,7 +196,7 @@
 	}
 }
 
-#dialog-settings_content, #dialog-settings_user-defined, #dialog-create-page_child, #dialog-create-page_root {
+#dialog-page-settings_render, #dialog-settings_content, #dialog-settings_user-defined, #dialog-create-page_child, #dialog-create-page_root {
 	width: 900px;
 	margin-left: -450px;
 }
