--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-properties.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-properties.tml
@@ -13,7 +13,9 @@
 		
 			{{#version}}
 				<fieldset class="clip">
-					<legend>Inhaltsversion</legend>
+					<legend>
+						<a href="#" data-dialog="settings:content" title="Inhaltseigenschaften bearbeiten">Inhaltsversion</a>
+					</legend>
 
 					<div class="form-group">
 						<label>Version {{version}} / {{languagetitle}}</label>
@@ -98,9 +100,11 @@
 			{{/version}}
 			
 			<fieldset>
-				<legend>Seite</legend>
+				<legend>
+					<a href="#" data-dialog="page-settings:render" title="Seiteneigenschaften bearbeiten">Seite</a>
+				</legend>
 				<div class="form-group">
-					<p class="data">{{pagetype}}</p>
+					<p class="data"><a href="#" data-dialog="settings:user-defined" title="Seitentyp-Eigenschaften bearbeiten">{{pagetype}}</a></p>
 				</div>
 				{{#pageworkflow}}
 					<div class="form-group">
@@ -166,3 +170,11 @@
 	
 </tml:[template]>
 
+<script>
+	require(["jquery", "cm"], function($,CM){
+		$(document).on("click", "#sidepannel-content-properties [data-dialog]", function(ev){
+			ev.preventDefault();
+			CM.openDialog($(this).data("dialog"));
+		})
+	})
+</script>
