--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-rtf-link.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-rtf-link.tml
@@ -90,6 +90,8 @@
 							_container = parts[0];
 							_filename = parts[1];
 							_dbkey = parts[2];
+							if(!_dbs.contains(_dbkey))
+								_dbs.add(_dbkey + " - nicht gefunden -|" + _dbkey);
 						}
 						if(parts.length==2){
 							_container = parts[0];
@@ -113,16 +115,18 @@
 				</tml:script>
 				
 				<tml:[form-field] o_label="App" o_name="dbkey" o_default="{_dbkey}" o_type="select" o_optionsitem="_dbs" o_changeaction="app-changed"/>
-				<tml:[form-field] o_label="Sprache" o_name="lang" o_default="{_lang}" o_type="select" o_optionsitem="_langs" o_changeaction="$refresh"/>
-
-				<tml:[form-field] o_label="Dokument">
-					<tml:include ref="util:select-document" o_fieldname="container" o_default="{_container}" 
-							o_dbkey="{tmlform.dbkey=='this'?VOID:tmlform.dbkey}" 
-							o_language="{tmlform.lang}"
-					>
-						<tml:option name="changeaction"><tml:action ref="$refresh"/></tml:option>
-					</tml:include>
-				</tml:[form-field]>
+				<tml:case condition="tmlform.dbkey=='this' || db(tmlform.dbkey)">
+					<tml:[form-field] o_label="Sprache" o_name="lang" o_default="{_lang}" o_type="select" o_optionsitem="_langs" o_changeaction="$refresh"/>
+	
+					<tml:[form-field] o_label="Dokument">
+						<tml:include ref="util:select-document" o_fieldname="container" o_default="{_container}" 
+								o_dbkey="{tmlform.dbkey=='this'?VOID:tmlform.dbkey}" 
+								o_language="{tmlform.lang}"
+						>
+							<tml:option name="changeaction"><tml:action ref="$refresh"/></tml:option>
+						</tml:include>
+					</tml:[form-field]>
+				</tml:case>
 
 				<tml:case condition="tmlform.container">
 					<tml:script>
